--- a/SportsComplexApp.Data.Models/SportsComplexApp.Data.Models.csproj
+++ b/SportsComplexApp.Data.Models/SportsComplexApp.Data.Models.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SportsComplexApp.Common\SportsComplexApp.Common.csproj" />
   </ItemGroup>
 
