--- a/SportsComplexApp.Web/SportsComplexApp.Web.csproj
+++ b/SportsComplexApp.Web/SportsComplexApp.Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SportsComplex.Web.ViewModels\SportsComplex.Web.ViewModels.csproj" />
     <ProjectReference Include="..\SportsComplexApp.Common\SportsComplexApp.Common.csproj" />
+    <ProjectReference Include="..\SportsComplexApp.Data.Models\SportsComplexApp.Data.Models.csproj" />
     <ProjectReference Include="..\SportsComplexApp.Data\SportsComplexApp.Data.csproj" />
   </ItemGroup>
 
@@ -17,6 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
